feat(Bucket): add PUT /portal/bucket/{bucket_id} interface
