# routes/web.php
@@ -14,6 +14,7 @@ $router->group(['prefix' => 'v1'], function () use ($router) {
         $router->group(['prefix' => 'bucket'], function () use ($router) {
             $router->post('/', 'BucketController@create');
             $router->get('/{bucket_id}', 'BucketController@info');
+            $router->put('/{bucket_id}', 'BucketController@empty');
             $router->delete('/{bucket_id}', 'BucketController@destroy');
         });
         $router->group(['prefix' => 'query'], function () use ($router) {
